--- a/PizzaApp.Web/Views/Home/Index.cshtml
+++ b/PizzaApp.Web/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
+﻿@using static PizzaApp.GCommon.Constants
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to @AppName!</h1>
+    <h2>Home of the greatest pizza the Universe has to offer!</h2>
+
+    <a class="btn btn-danger" id="btn-menu" asp-action="Index" asp-controller="Menu">Check our offers!</a>
+    
 </div>
