--- a/PizzaApp.Web/Views/Shared/_Layout.cshtml
+++ b/PizzaApp.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PizzaApp.Web.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/94d35039c6.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
