--- a/PizzaApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/PizzaApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,8 +6,11 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
+    @* <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+    </li> *@
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Order now!</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
