--- a/PizzaApp.Web/wwwroot/css/site.css
+++ b/PizzaApp.Web/wwwroot/css/site.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
   font-size: 14px;
 }
@@ -20,3 +26,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.container-main {
+    padding: 3rem;
+}
+
+
+.card-btn {
+    width: 100%;
+}
+
