--- a/PizzaApp.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PizzaApp.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -37,7 +37,7 @@
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Don't have an account yet? Let's fix that!</a>
                     </p>
                     <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
@@ -47,7 +47,7 @@
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+        @* <section>
             <h3>Use another service to log in.</h3>
             <hr />
             @{
@@ -74,7 +74,7 @@
                     </form>
                 }
             }
-        </section>
+        </section> *@
     </div>
 </div>
 
