--- a/PizzaApp.Web/Views/Shared/_MenuItemOverviewCardPartial.cshtml
+++ b/PizzaApp.Web/Views/Shared/_MenuItemOverviewCardPartial.cshtml
@@ -3,13 +3,15 @@
 
 
 <div class="card" style="width: 18rem;">
+    <a class="add-to-favorites" href="#"><i class="fa-regular fa-heart favorites-icon"></i></a>
     <img class="card-img-top" src=@Model.ImageUrl alt="Image of @Model.Name">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
         <p class="card-text">@Model.Description</p>
         <div class="card-btn-container">
+            <a asp-controller="Menu" asp-action="Details" asp-route-id="@Model.Id" class="card-btn btn btn-primary"><i class="fa-solid fa-circle-info"></i></a>
+            
             <a href="#" class="card-btn btn btn-danger"><i class="fa-solid fa-cart-plus"></i></a>
-            <a href="#" class="card-btn btn btn-warning"><i class="fa-solid fa-circle-info"></i></a>
         </div>
     </div>
 </div>
