--- a/PizzaApp.Web/Views/Shared/_MenuSidebar.cshtml
+++ b/PizzaApp.Web/Views/Shared/_MenuSidebar.cshtml
@@ -1,21 +1,12 @@
-﻿@* <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0">
-    <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100"> *@
-        <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start">
-            <li>
-                <a asp-action="Pizzas" class="nav-link px-0 align-middle">
-                    <span class="ms-1 d-none d-sm-inline">Pizzas</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="Drinks" class="nav-link px-0 align-middle">
-                    <span class="ms-1 d-none d-sm-inline">Drinks</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="Desserts" class="nav-link px-0 align-middle">
-                    <span class="ms-1 d-none d-sm-inline">Desserts</span>
-                </a>
-            </li>
-        </ul>
-@*     </div>
-</div> *@
+﻿@model IEnumerable<string>
+
+<ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start">
+    @foreach(string category in Model)
+    {
+        <li>
+            <a asp-action="@category" class="nav-link px-0 align-middle">
+                <span class="ms-1 d-none d-sm-inline">@category</span>
+            </a>
+        </li>
+    }          
+</ul>
