Added pizza pre-order details view.

--- a/PizzaApp.Web/Views/Menu/Category.cshtml
+++ b/PizzaApp.Web/Views/Menu/Category.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PizzaApp.Web.ViewModels
+@using PizzaApp.Web.ViewModels.Menu
 @model MenuCategoryViewModel
 
 <div class="container menu-page">
