--- a/PizzaApp.Web/wwwroot/css/site.css
+++ b/PizzaApp.Web/wwwroot/css/site.css
@@ -33,7 +33,7 @@ body {
 
 
 .card-btn {
-    width: 48%;
+    width: 100%;
 }
 
 .add-to-favorites {
@@ -45,9 +45,8 @@ body {
     right: 5px;
 }
 
-.favorites-icon {
-    position: absolute;
-    top: 2px;
-    left: 2px;
+.img-pizza-details {
+    object-fit: cover;
+    height: 500px;
+    width: 100%;
 }
-
