Order pizza view refactor.

--- a/PizzaApp.Web/Views/Menu/Category.cshtml
+++ b/PizzaApp.Web/Views/Menu/Category.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container menu-page">
     <div class="container-fluid">
-        <partial name="_MenuSidebar" model="@Model.AllCategories"/> 
+        <partial name="_MenuSidebarPartial" model="@Model.AllCategories"/> 
         <div class="row flex-wrap">
             <div class="col py-3">
                 @foreach (MenuItemViewModel menuViewModel in Model.Items)
@@ -14,5 +14,8 @@
             </div>
         </div>
     </div>
-
 </div>
+
+@section Styles {
+    <link href="@Url.Content("~/css/Menu/menu-card.css")" rel="stylesheet" type="text/css" />
+}
