--- a/PizzaApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/PizzaApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li> *@
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Order now!</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
