--- a/PizzaApp.Web/Views/Menu/PizzaDetails.cshtml
+++ b/PizzaApp.Web/Views/Menu/PizzaDetails.cshtml
@@ -3,32 +3,32 @@
 
 @{
     ViewData["Title"] = Model.Pizza.Name;
+    bool hasImage = Model.Pizza.ImageUrl != null;
 }
 <a class="btn btn-success btn-back"><i class="fa-solid fa-arrow-left"></i> Back</a>
-<form asp-action="AddToCart" method="post" class="container">
-    <img class="img-pizza-details" src="@Model.Pizza.ImageUrl"/>
+<form asp-action="AddToCart" method="post" class="container" name="pizza-form">
+    @if (hasImage)
+    {
+        <img class="img-pizza-details" src="@Model.Pizza.ImageUrl"/>
+    }
     <div class="mb-3">
-        @* <label asp-for="Pizza.Name" class="form-label">Pizza Name</label>
-        <input asp-for="Pizza.Name" class="form-control" /> *@
         <h2>@Model.Pizza.Name</h2>
+        <input asp-for="@Model.Pizza.Id" type="hidden" value="@Model.Pizza.Id" />
     </div>
     <div class="mb-3">
-        @* <label asp-for="Pizza.Description" class="form-label">Description</label>
-        <textarea asp-for="Pizza.Description" class="form-control"></textarea> *@
         <h3>@Model.Pizza.Description</h3>
     </div>
 
     <div class="pizza-options-container">
-        
         <div class="pizza-options-selects">
             <!-- Dough Select -->
             <div class="mb-3">
                 <label asp-for="Pizza.DoughId" class="form-label">Dough</label>
                 <select asp-for="Pizza.DoughId" class="form-select">
                     <option value="">Select dough</option>
-                    @foreach (var dough in Model.Doughs)
+                    @foreach (var dough in Model.Ingredients.Doughs)
                     {
-                        <option value="@dough.Id">@dough.Name</option>
+                        <option data-price="@dough.Price" value="@dough.Id">@dough.Name</option>
                     }
                 </select>
             </div>
@@ -38,17 +38,16 @@
                 <label asp-for="Pizza.SauceId" class="form-label">Sauce</label>
                 <select asp-for="Pizza.SauceId" class="form-select">
                     <option value="">Select sauce</option>
-                    @foreach (var sauce in Model.Sauces)
+                    @foreach (var sauce in Model.Ingredients.Sauces)
                     {
-                        <option value="@sauce.Id">@sauce.Name</option>
+                        <option data-price="@sauce.Price" value="@sauce.Id">@sauce.Name</option>
                     }
                 </select>
             </div>
         </div>
         
         <div class="pizza-options-checkboxes">
-            <!-- Toppings by Category as Radio Groups -->
-            @foreach (var category in Model.ToppingCategories)
+            @foreach (var category in Model.Ingredients.ToppingCategories)
             {
                 <fieldset class="mb-3">
                     <legend>@category.Name</legend>
@@ -58,9 +57,10 @@
                             <div class="form-check col-md-4">
                                 <input class="form-check-input"
                                        type="checkbox"
-                                       name="Selected_@category.Name"
-                                       id="topping_@topping.Id"
                                        value="@topping.Id"
+                                       name="SelectedToppingIds"
+                                       id="topping_@topping.Id"
+                                       data-price="@topping.Price"
                                        @(Model.Pizza.SelectedToppingIds.Contains(topping.Id) ? "checked" : "") />
                                 <label class="form-check-label" for="topping_@topping.Id">
                                     @topping.Name (@topping.Price.ToString("C"))
@@ -72,6 +72,7 @@
             }
         </div>
     </div>
+    <div>Price: <output name="total">$@Model.Pizza.Price</output></div>
     <button type="submit" class="btn btn-danger">I want one!</button>
 </form>
 
@@ -80,5 +81,6 @@
 }
 
 @section Scripts {
-    <script src="@Url.Content("~/js/pizza-details.js")"></script>
+    <script src="~/js/pizza-details.js"></script>
+    <script src="~/js/pizzas/create-pizza.js"></script>
 }
