--- a/PizzaApp.Web/Views/Pizzas/Create.cshtml
+++ b/PizzaApp.Web/Views/Pizzas/Create.cshtml
@@ -8,14 +8,16 @@
 }
 <h2>Create Pizza</h2>
 
-<form asp-action="Add" method="post" class="container" name="create-pizza">
+<form asp-action="Add" method="post" class="container" name="pizza-form">
     <div class="mb-3">
         <label asp-for="Pizza.Name" class="form-label">Pizza Name</label>
         <input asp-for="Pizza.Name" class="form-control" />
+        <span asp-validation-for="Pizza.Name" class="text-danger"></span>
     </div>
     <div class="mb-3">
         <label asp-for="Pizza.Description" class="form-label">Description</label>
         <textarea asp-for="Pizza.Description" class="form-control"></textarea>
+        <span asp-validation-for="Pizza.Description" class="text-danger"></span>
     </div>
 
     <!-- Dough Select -->
@@ -28,6 +30,7 @@
                 <option data-price="@dough.Price" value="@dough.Id">@dough.Name</option>
             }
         </select>
+        <span asp-validation-for="Pizza.DoughId" class="text-danger"></span>
     </div>
 
     <!-- Sauce Select -->
@@ -42,7 +45,6 @@
         </select>
     </div>
 
-    <!-- Toppings by Category as Radio Groups -->
     @foreach (var category in Model.Ingredients.ToppingCategories)
     {
         <fieldset class="mb-3">
@@ -66,6 +68,7 @@
             </div>
         </fieldset>
     }
-    <div>Your pizza total is: <output name="total"></output></div>
+    <div>Price: <output name="total"></output></div>
     <button type="submit" class="btn btn-primary">Create Pizza</button>
 </form>
+<partial name="_ValidationScriptsPartial" />
