--- a/PizzaApp.Web/Views/Shared/_Layout.cshtml
+++ b/PizzaApp.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PizzaApp.Web.styles.css" asp-append-version="true" />
     <script src="https://kit.fontawesome.com/94d35039c6.js" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
 </head>
 <body>
     <header>
