--- a/PizzaApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/PizzaApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,12 @@
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li> *@
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
+        
+            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-cart-shopping fa-xl"></i> Cart</a>
+    </li>
+    <li class="nav-item">
+            
+            <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index"><i class="fa-solid fa-pizza-slice fa-xl"></i> Menu</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -24,7 +29,7 @@ else
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li> *@
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login"> Order now!</a>
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login"> Login</a>
     </li>
 }
 </ul>
