Finished implementing shopping cart. Users can now add and remove items to and from it.

--- a/PizzaApp.Web/Views/Cart/Index.cshtml
+++ b/PizzaApp.Web/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using PizzaApp.Web.ViewModels.ShoppingCart
+﻿@* @using PizzaApp.Web.ViewModels.ShoppingCart
 @model ICollection<PizzaShoppingCartViewModel>
 
 @{
@@ -109,4 +109,4 @@
             </div>
         </div>
     }
-</div>
+</div> *@
