--- a/PizzaApp.Web/Views/Shared/_Layout.cshtml
+++ b/PizzaApp.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/PizzaApp.Web.styles.css" asp-append-version="true" />
     <script src="https://kit.fontawesome.com/94d35039c6.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
