--- a/PizzaApp.Web/Views/Shared/_Layout.cshtml
+++ b/PizzaApp.Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <partial name="_NavigationPartial" />
                 </div>
             </div>
         </nav>
