--- a/PizzaApp.Web/wwwroot/css/site.css
+++ b/PizzaApp.Web/wwwroot/css/site.css
@@ -38,7 +38,66 @@ body {
     gap: 4px;
 }
 
+.hidden {
+    display: none !important;
+}
+
 .nav-item {
     border: 2px solid black;
     border-radius: 10px;
+    cursor: pointer;
+}
+
+
+
+.user-icon-dropdown {
+    position: relative;
+}
+
+.account-dropdown-menu {
+    list-style-type: none;
+    position: absolute;
+    top: 50px;
+    right: 10px;
+    border: 4px solid gray;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    background: gray;
+    gap: 4px;
+    border-radius: 5px;
+    padding: 0;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.account-dropdown-menu:after {
+    margin: 0;
+    padding: 0;
+    display: block;
+    position: absolute;
+    content: "";
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid gray;
+    right: -3px;
+    top: -12px;
+}
+
+.account-dropdown-menu > li {
+    width: 100%;
+    background: white;
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.account-dropdown-menu > li > a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#btn-logout {
+    width: 100%;
+    padding: 0;
 }
