--- a/PizzaApp.Web/wwwroot/css/site.css
+++ b/PizzaApp.Web/wwwroot/css/site.css
@@ -14,6 +14,10 @@ html {
   }
 }
 
+.hidden {
+    display: none !important;
+}
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
@@ -38,17 +42,22 @@ body {
     gap: 4px;
 }
 
-.hidden {
-    display: none !important;
+nav.navbar > div.container-fluid {
+    max-width: 1320px;
 }
 
-.nav-item {
-    border: 2px solid black;
+.navbar-nav-item {
     border-radius: 10px;
     cursor: pointer;
+    color: white;
 }
 
+.navbar-nav-item > i {
+    color: white;
+}
 
+.navbar-nav-item:hover {
+}
 
 .user-icon-dropdown {
     position: relative;
@@ -94,10 +103,14 @@ body {
 
 .account-dropdown-menu > li > a {
     text-decoration: none;
-    color: inherit;
+    color: black;
 }
 
 #btn-logout {
     width: 100%;
     padding: 0;
+}
+
+#site-logo {
+    max-height: 70px;
 }
