--- a/PizzaApp.Web/Views/Cart/Index.cshtml
+++ b/PizzaApp.Web/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PizzaApp.Web.ViewModels.ShoppingCart.ShoppingCartItemsViewModel
+﻿@model PizzaApp.Web.ViewModels.ShoppingCart.CartItemsViewModel
 @{
     ViewData["Title"] = "Your Shopping Cart";
 }
