--- a/PizzaApp.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/PizzaApp.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="Admin" asp-controller="Dashboard" asp-action="Index">Pizza Admin</a>
+                <a class="navbar-brand" asp-area="Admin" asp-controller="Manage" asp-action="Index">Pizza Admin</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
