Implemented Admin panel topping editing. Renamed wrapper ViewModels to better fit their purpose and ease project navigation.

--- a/PizzaApp.Web/Views/Cart/Index.cshtml
+++ b/PizzaApp.Web/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PizzaApp.Web.ViewModels.ShoppingCart.CartItemsViewModel
+﻿@model PizzaApp.Web.ViewModels.ShoppingCart.CartItemsViewWrapper
 @{
     ViewData["Title"] = "Your Shopping Cart";
 }
