--- a/PizzaApp.Web/Views/Cart/IndexAlt.cshtml
+++ b/PizzaApp.Web/Views/Cart/IndexAlt.cshtml
@@ -1,4 +1,4 @@
-﻿@model PizzaApp.Web.ViewModels.ShoppingCart.CartViewModel
+﻿@model PizzaApp.Web.ViewModels.ShoppingCart.CartViewWrapper
 @{
     ViewData["Title"] = "Your Shopping Cart";
 }
