--- a/PizzaApp.Web/Views/Menu/Category.cshtml
+++ b/PizzaApp.Web/Views/Menu/Category.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PizzaApp.Web.ViewModels
 @using PizzaApp.Web.ViewModels.Menu
-@model MenuCategoryViewModel
+@model MenuCategoryViewWrapper
 
 <div class="container menu-page">
     <div class="container-fluid">
