--- a/PizzaApp.Web/Views/Menu/PizzaDetails.cshtml
+++ b/PizzaApp.Web/Views/Menu/PizzaDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PizzaApp.Web.ViewModels.Menu;
-@model OrderPizzaViewModel
+@model OrderPizzaViewWrapper
 
 @{
     ViewData["Title"] = Model.Pizza.Name;
