--- a/PizzaApp.Web/Areas/Admin/Views/Manage/Items.cshtml
+++ b/PizzaApp.Web/Areas/Admin/Views/Manage/Items.cshtml
@@ -25,13 +25,6 @@
                 <td>@item.Name</td>
                 <td>@Model.Category</td>
                 <td>
-                    @* <div class="form-check form-switch">
-                        <input class="form-check-input toggle-active"
-                               type="checkbox"
-                               disabled
-                               data-id="@item.Id"
-                               @(item.IsActive ? "checked" : "") />
-                    </div> *@
                     @if(item.IsActive)
                     {
                         <i class="fa-solid fa-check fa-2xl"></i>
@@ -48,28 +41,48 @@
         }
     </tbody>
 </table>
+<nav aria-label="Page navigation">
+    <ul class="pagination">
+        @if (Model.CurrentPage > 1)
+        {
+            <li class="page-item">
+                <a class="page-link" href="?page=@(Model.CurrentPage - 1)">Previous</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item disabled">
+                <span class="page-link">Previous</span>
+            </li>
+        }
 
-@section Scripts {
-    @* <script>
-        document.querySelectorAll('.toggle-active').forEach(switchEl => {
-            switchEl.addEventListener('change', function () {
-                const itemId = this.getAttribute('data-id');
-                const isActive = this.checked;
+        @for (int i = 1; i <= Model.TotalPages; i++)
+        {
+            if (i == Model.CurrentPage)
+            {
+                <li class="page-item active">
+                    <span class="page-link">@i</span>
+                </li>
+            }
+            else
+            {
+                <li class="page-item">
+                    <a class="page-link" href="?page=@i">@i</a>
+                </li>
+            }
+        }
 
-                fetch('/Admin/Manage/@Model.Category/ToggleActive', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'RequestVerificationToken': document.querySelector('input[name="__RequestVerificationToken"]').value
-                    },
-                    body: JSON.stringify({ id: itemId, isActive: isActive })
-                }).then(response => {
-                    if (!response.ok) {
-                        alert('Failed to update status.');
-                        this.checked = !isActive;
-                    }
-                });
-            });
-        });
-    </script> *@
-}
+        @if (Model.CurrentPage < Model.TotalPages)
+        {
+            <li class="page-item">
+                <a class="page-link" href="?page=@(Model.CurrentPage + 1)">Next</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item disabled">
+                <span class="page-link">Next</span>
+            </li>
+        }
+    </ul>
+</nav>
