Bug fixes and code clean up.

--- a/PizzaApp.Web/Views/Menu/ItemDetails.cshtml
+++ b/PizzaApp.Web/Views/Menu/ItemDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PizzaApp.Web.ViewModels.Menu
-@model OrderItemViewModel
+@model MenuItemDetailsViewModel
 
 @{
     ViewData["Title"] = Model.Name;
