--- a/PizzaApp.Web/Views/Menu/PizzaDetails.cshtml
+++ b/PizzaApp.Web/Views/Menu/PizzaDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PizzaApp.Web.ViewModels.Menu;
-@model OrderPizzaViewWrapper
+@model PizzaDetailsViewWrapper
 
 @{
     ViewData["Title"] = Model.Pizza.Name;
@@ -14,6 +14,7 @@
     <div class="mb-3">
         <h2>@Model.Pizza.Name</h2>
         <input asp-for="@Model.Pizza.Id" type="hidden" value="@Model.Pizza.Id" />
+        <input asp-for="@Model.Pizza.Name" type="hidden" value="@Model.Pizza.Name" />
     </div>
     <div class="mb-3">
         <h3>@Model.Pizza.Description</h3>
@@ -57,10 +58,10 @@
                                 <input class="form-check-input"
                                        type="checkbox"
                                        value="@topping.Id"
-                                       name="SelectedToppingIds"
+                                       name="Pizza.SelectedToppingIds"
                                        id="topping_@topping.Id"
                                        data-price="@topping.Price"
-                                       @(Model.Pizza.SelectedToppingIds.Contains(topping.Id) ? "checked" : "") />
+                                       checked = "@(Model.Pizza.SelectedToppingIds.Contains(topping.Id) ? "checked" : "")" />
                                 <label class="form-check-label" for="topping_@topping.Id">
                                     @topping.Name (@topping.Price.ToString("C"))
                                 </label>
